# rust-graphics

./: Cargo.toml  README.md  build.rs
assets/shaders/: pipeline_challenge.wgsl  shader.wgsl
src/: launcher.rs  lib.rs  main.rs
src/bins/: triangle.rs
src/common/: resources.rs
src/common-examples/: window.rs
src/render/: atlas.rs  block.rs  buffer.rs  instances.rs  mesh.rs  mod.rs  model.rs  model_obj.rs  renderer.rs  texture.rs
src/render/pipelines/: figure.rs  mod.rs  polygon.rs  triangle.rs
src/scene/: camera.rs
src/shaders/: shader.wgsl  triangle.frag  triangle.vert
