[package]
name = "learning-3d-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.38"
gl = "0.14"


# Runable .rs files that are examples of rendering certain shapes, animations or graphical behaviors.
[[bin]]
name = "triangle"
path = "src/2d-render-examples/triangle.rs"