[package]
name = "rust-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
cfg-if = "1"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
instant = "0.1" #because std::time::Instant panics on WASM
# other dependencies...
tobj = { version = "3.2.1", features = [
    "async",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
 
